# linkollector-cli

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CheckLinkerFlag.cmake
src/: CMakeLists.txt  main.cpp  server.cpp  server.h  signal_helper.cpp  signal_helper.h
src/wrappers/zmq/: poll.cpp  socket.cpp  socket.h
